[project]
name = "promptgate"
version = "0.1.0"
description = "A quality gate for agent prompts. Version, test, and CI/CD gate your agent behaviour like the software it is."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.0.1",
    "typer>=0.9.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
promptgate = "promptgate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
